# notifications-prototype

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
notifications_prototype/: cleaner.py  example_users.json  monitor.py  puller.py  pusher.py  redis_queue.py  settings.py
